--- a/K3-TOOLS/K3-TOOLS.csproj
+++ b/K3-TOOLS/K3-TOOLS.csproj
@@ -55,16 +55,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CssScript.cs" />
+    <Compile Include="Model.cs" />
+    <Compile Include="Script.cs" />
+    <Compile Include="HtmlScript.cs" />
+    <Compile Include="GenericFile.cs" />
+    <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Video.cs" />
+    <Compile Include="Audio.cs" />
+    <Compile Include="Image.cs" />
+    <Compile Include="FileType.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectSorterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProjectSorterForm.Designer.cs">
+      <DependentUpon>ProjectSorterForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ProjectSorterForm.resx">
+      <DependentUpon>ProjectSorterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,6 +90,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
