added some more stuff. settings are bugged (combo boxes and binding is new to me)

--- a/K3-TOOLS/App.config
+++ b/K3-TOOLS/App.config
@@ -37,6 +37,27 @@
    <setting name="SettingsWindowHeight" serializeAs="String">
     <value>0</value>
    </setting>
+   <setting name="ImageFolderName" serializeAs="String">
+    <value>Images</value>
+   </setting>
+   <setting name="AudioFolderName" serializeAs="String">
+    <value>Audio</value>
+   </setting>
+   <setting name="VideoFolderName" serializeAs="String">
+    <value>Video</value>
+   </setting>
+   <setting name="ModelFolderName" serializeAs="String">
+    <value>3D Models</value>
+   </setting>
+   <setting name="CSharpScriptFolderName" serializeAs="String">
+    <value>Scripts</value>
+   </setting>
+   <setting name="HtmlScriptFolderName" serializeAs="String">
+    <value>html</value>
+   </setting>
+   <setting name="CssScriptFolderName" serializeAs="String">
+    <value>css</value>
+   </setting>
   </K3_TOOLS.Properties.Settings>
  </userSettings>
 </configuration>
