added functionality for dropping folders in the program

--- a/K3-TOOLS/App.config
+++ b/K3-TOOLS/App.config
@@ -23,7 +23,7 @@
     <value>0</value>
    </setting>
    <setting name="BaseDirectory" serializeAs="String">
-    <value />
+    <value>Press "Set Project Directory"</value>
    </setting>
    <setting name="SortExistingFiles" serializeAs="String">
     <value>False</value>
