--- a/K3-TOOLS/App.config
+++ b/K3-TOOLS/App.config
@@ -58,6 +58,39 @@
    <setting name="CssScriptFolderName" serializeAs="String">
     <value>css</value>
    </setting>
+   <setting name="ImagePrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="AudioPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="VideoPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ModelPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="CSharpScriptPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="HtmlScriptPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="CssScriptPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="PrefabFolderName" serializeAs="String">
+    <value>Prefabs</value>
+   </setting>
+   <setting name="PrefabPrefix" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="MaterialFolderName" serializeAs="String">
+    <value>Material</value>
+   </setting>
+   <setting name="MaterialPrefix" serializeAs="String">
+    <value />
+   </setting>
   </K3_TOOLS.Properties.Settings>
  </userSettings>
 </configuration>
