--- a/K3-TOOLS/App.config
+++ b/K3-TOOLS/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="K3_TOOLS.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="K3_TOOLS.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 	<System.Windows.Forms.ApplicationConfigurationSection>
-		<add key="DpiAwareness" value="PerMonitorV2" />
+		<add key="DpiAwareness" value="PerMonitorV2"/>
 	</System.Windows.Forms.ApplicationConfigurationSection>
  <userSettings>
   <K3_TOOLS.Properties.Settings>
@@ -59,38 +59,46 @@
     <value>css</value>
    </setting>
    <setting name="ImagePrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="AudioPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="VideoPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ModelPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="CSharpScriptPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="HtmlScriptPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="CssScriptPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="PrefabFolderName" serializeAs="String">
     <value>Prefabs</value>
    </setting>
    <setting name="PrefabPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="MaterialFolderName" serializeAs="String">
     <value>Material</value>
    </setting>
    <setting name="MaterialPrefix" serializeAs="String">
-    <value />
+    <value/>
    </setting>
   </K3_TOOLS.Properties.Settings>
  </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
