added undo and redo command pattern

--- a/K3-TOOLS/Properties/Settings.settings
+++ b/K3-TOOLS/Properties/Settings.settings
@@ -80,5 +80,11 @@
     <Setting Name="MaterialPrefix" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GenericFolderName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Unidentified</Value>
+    </Setting>
+    <Setting Name="GenericPrefix" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
