custom folder name functionality is now working

--- a/K3-TOOLS/App.config
+++ b/K3-TOOLS/App.config
@@ -97,6 +97,12 @@
    <setting name="GenericPrefix" serializeAs="String">
     <value />
    </setting>
+   <setting name="CustomKeyList" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="CustomValueList" serializeAs="String">
+    <value />
+   </setting>
   </K3_TOOLS.Properties.Settings>
  </userSettings>
   <runtime>
