--- a/K3-TOOLS/Properties/Settings.settings
+++ b/K3-TOOLS/Properties/Settings.settings
@@ -86,5 +86,11 @@
     <Setting Name="GenericPrefix" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CustomKeyList" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CustomValueList" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
